<resources>
    <string name="app_name">PowderMills</string>->
    <string name="terms_and_conditions_title">Terms and Conditions</string>
    <string name="terms_and_conditions_checkbox_text">I agree to the terms and conditions</string>
    <string name="continueButtonText">Continue</string>
    <string name="building_list_title_text">PowderMills</string>
    <string name="splash_screen_background">Splash Screen Background</string>
    <string name="history_section_title_text">History</string>
    <string name="function_section_title">Function</string>
    <string name="trivia_section_title">Trivia</string>
    info@powdermills.ie
    <string name="terms_and_conditions_html"><![CDATA[
<strong>1. INTRODUCTION</strong> <br><br>
   1.1 As a user of this Application (<strong>“App”</strong>) you acknowledge and agree that the use of this App is governed by these terms and conditions of use (the “<strong>Terms</strong>”).
    <strong>Please read the Terms carefully before using this App as they contain important information about your rights and obligations. </strong>
    If you have any questions about these Terms please email us at <a href="mailto:info@powdermills.ie">info@powdermills.ie</a>. <br><br>
   1.2 <strong>By accessing and viewing this App you agree that you have read, understood and become bound by the Terms. If you do not wish to be bound by the Terms you may not use this App.</strong><br><br>
   1.3 This App is directed solely at users who are at least sixteen (16) years of age and who are located within Ireland at the time of use.<br><br>
<strong>2. DISCLAIMER<br><br></strong>
   2.1 All material, content and information on this App is for general information purposes only and does not constitute advice.
     You should not assume that the content on this App is continuously updated or otherwise contains current and/or accurate information.<br><br>
   2.2 We do not make any representation or warranty, express or implied, concerning material, content and information on this App, which are provided “as is”.
    We exclude all express or implied terms, conditions, warranties, representations or endorsements whatsoever in relation to the viewing, use or performance of this App or any information provided through this App.<br><br>
   2.3 Your use of this App is at your own risk.
     To the fullest extent permitted by applicable law, we shall not, under any circumstances, be liable to you in contract, tort (including without limitation negligence) or otherwise howsoever for any direct,
      indirect, incidental, special, punitive or consequential loss that results from your use of or access to, this App or any material, information or content thereon,
       including but not limited to any such loss suffered as a result of our negligence or any inaccuracy, act, error,
        omission or any other cause and whether or not on the part of our part or on the part of any other person or entity even if such loss is foreseeable or we have been advised of the possibility of it.
         Without prejudice to the foregoing, we shall not be liable in contract, tort (including without limitation, negligence) or otherwise howsoever to you for any direct or indirect loss of profit,
          data, opportunity or reputation.<br><br>
   2.4 While using this App you shall not:<br><br>
      (a) encroach upon or trespass (or attempt to encroach upon or trespass) upon private property; and/or <br><br>
      (b) engage in any activity which may cause or result in death or personal injury to you or another individual; and/or <br><br>
      (c) cause damage or nuisance to the property of another person<br><br>
and we shall not be liable in contract, tort (including without limitation, negligence) or otherwise howsoever to you or any other person in the event that you engage in any of these prohibited activities.<br><br>
   2.5 The disclaimer in this section 2 shall not operate to exclude any term, warranty or liability that may not be excluded under Irish Law.<br><br>

<strong>3. INTELLECTUAL PROPERTY AND MATERIALS<br><br></strong>
   3.1 We are the owner or the licensee of all intellectual property in this App including but not limited to copyright, moral rights, patents, trademarks, trade names, service marks, designs (software or otherwise),
    database rights, whether registered or unregistered generally present and future in and relating to this App (the “Intellectual Property”).
     This Intellectual Property is protected by copyright laws and treaties around the world. All such rights are reserved.<br><br>
<strong>4. THIRD PARTY LINKS<br><br></strong>
   4.1 This App may contain links to other websites or applications.
     In no way should this be interpreted as an endorsement of any company, content or products to which this App links.
      If you decide to access any of third party websites or applications linked to this App, you do so entirely at your own risk.
       We make no representation or warranty whatsoever about any other website or application which you may access through this App.<br><br>
   4.2 Please note that third party websites or applications may send their own cookies to users to collect data or solicit personal information,
    and you are therefore advised to check the terms to use and/or privacy and cookie policies/statements on those third party websites or applications prior to using them.<br><br>
<strong>5. DATA PROTECTION, PRIVACY POLICY<br><br></strong>
   5.1 We do not collect or store your personal data.<br><br>
<strong>6. GENERAL<br><br></strong>
   6.1 <strong>Law:</strong> These Terms shall be governed by, and construed in accordance with, the laws of Ireland and the courts of Ireland shall have exclusive jurisdiction to settle all disputes that arise out of or in
   connection with the Terms.<br><br>
   6.2 <strong>Communications:</strong> No liability will attach to us in the event of unauthorised access, interference or interception by third parties to this App or any of your content or any communication system.<br><br>
   6.3 <strong>Changes to the Terms:</strong> We may, at our discretion and without notice, amend the Terms from time to time, the most recent of which will be located on this App.<br><br>
   6.4 <strong>Severability:</strong> If the whole or any part of a provision of these Terms is or becomes illegal, invalid or unenforceable, then the provision so found shall be deemed severable and deleted from them.<br><br>
   6.5 <strong>Assignment:</strong> We may, at our discretion assign or transfer any right, title or interest in this App to any successors in title to our business or to a third party.<br><br>
    ]]></string>
    <string name="back_button_cd_text">Back Button</string>
    <string name="mapbox_access_token">pk.eyJ1Ijoia2V2aW5tY2dhcnJ5IiwiYSI6ImNraGFoaG56cjFjbnkzMGwybWozeTBlYXMifQ.m_uliyq42bjqqpuMj3dlmA</string>
    <string name="mapbox_style_url">"mapbox://styles/kevinmcgarry/ckhahij881umy19n08trhee74"</string>
    <string name="location_permissions_rationale">Location permissions are required to use the map feature to navigate the park.</string>
    <string name="splash_title_text">Powdermills</string>
    <string name="splash_screen_animation_content_description">Splash screen animated gif of rotating mill.</string>
</resources>