<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_color">

            <com.synnapps.carouselview.CarouselView
                android:id="@+id/carouselView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:autoPlay="false"
                app:fillColor="#FFFFFF"
                app:indicatorVisibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:pageColor="#FFFFFF"
                app:radius="6dp"
                app:strokeColor="#FF777777"
                app:strokeWidth="1dp" />

            <TextView
                android:id="@+id/powderMillsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/bebasneue_bold"
                android:text="@string/building_list_title_text"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:contentDescription="@string/back_button_cd_text"
                android:src="@drawable/ic_back_arrow_24"
                app:layout_constraintBottom_toBottomOf="@id/powderMillsTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/powderMillsTitle"
                app:tint="#FFFFFF" />

            <TextView
                android:id="@+id/building_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingStart="32dp"
                android:paddingEnd="0dp"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="@id/carouselView"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Incorporating Mill" />

            <TextView
                android:id="@+id/historyTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/history_section_title_background"
                android:fontFamily="@font/opensans_semibold"
                android:gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/history_section_title_text"
                android:textColor="@color/detail_section_title_color"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/carouselView" />

            <ImageView
                android:id="@+id/historyTitleSeparator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_detail_title_separator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/historyTitleText"
                app:tint="@color/history_section_title_background" />

            <TextView
                android:id="@+id/historyDetailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/historyTitleSeparator"
                tools:text="The original gunpowder mills had 4 Incorporating Mills. This was increased to 12 Incorporating mills by the next owners, the British Board of Ordnance, and finally to 24 Incorporating Mills by the third owners, Tobin &amp; Horsfall." />

            <TextView
                android:id="@+id/functionTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/building_detail_section_vertical_margin"
                android:background="@color/function_section_title_background"
                android:fontFamily="@font/opensans_semibold"
                android:gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/function_section_title"
                android:textColor="@color/detail_section_title_color"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/historyDetailText" />

            <ImageView
                android:id="@+id/functionTitleSeparator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_detail_title_separator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/functionTitleText"
                app:tint="@color/function_section_title_background" />

            <TextView
                android:id="@+id/functionDetailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/functionTitleSeparator"
                tools:text="The original gunpowder mills had 4 Incorporating Mills. This was increased to 12 Incorporating mills by the next owners, the British Board of Ordnance, and finally to 24 Incorporating Mills by the third owners, Tobin &amp; Horsfall." />

            <TextView
                android:id="@+id/triviaTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/building_detail_section_vertical_margin"
                android:background="@color/trivia_section_title_background"
                android:fontFamily="@font/opensans_semibold"
                android:gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/trivia_section_title"
                android:textColor="@color/detail_section_title_color"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/functionDetailText" />

            <ImageView
                android:id="@+id/triviaTitleSeparator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_detail_title_separator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/triviaTitleText"
                app:tint="@color/trivia_section_title_background" />

            <TextView
                android:id="@+id/triviaDetailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/triviaTitleSeparator"
                tools:text="The original gunpowder mills had 4 Incorporating Mills. This was increased to 12 Incorporating mills by the next owners, the British Board of Ordnance, and finally to 24 Incorporating Mills by the third owners, Tobin &amp; Horsfall." />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>